# Cyber_Badge

./: README.md
Firmware/Src/: CMakeLists.txt  partitions.csv
Firmware/Src/main/: CMakeLists.txt  idf_component.yml  main.cpp
Firmware/Src/main/CyberBadgeBsp/: CyberBadge.cpp  CyberBadge.h
Firmware/Src/main/CyberBadgeBsp/Button/: CyberBadgeButton.hpp
Firmware/Src/main/CyberBadgeBsp/LCD/: CyberBadgeLCD.hpp  LCD_driver.c  LCD_driver.h
Firmware/Src/main/CyberBadgeBsp/NVS/: CyberBadgeNVS.hpp
Firmware/Src/main/CyberBadgeBsp/Power/: CyberBadgePower.hpp
Firmware/Src/main/CyberBadgeBsp/RTC/: CyberBadgeRTC.hpp
Firmware/Src/main/CyberBadgeBsp/SD/: CyberBadgeSD.hpp
Firmware/Src/main/CyberBadgeUI/: CyberBadgeUI.cpp  CyberBadgeUI.h
Firmware/Src/main/CyberBadgeUI/Apps/: AppRegister.h  AppTypedef.h
Firmware/Src/main/CyberBadgeUI/Apps/App_2048/: App_2048.cpp  App_2048.h  ui_img_icon_2048_png.c
Firmware/Src/main/CyberBadgeUI/Apps/App_Settings/App_Settings_UI/: CMakeLists.txt  filelist.txt  project.info  ui.c  ui.h  ui_events.c  ui_events.h
Firmware/Src/main/CyberBadgeUI/Apps/App_Settings/App_Settings_UI/components/: ui_comp_hook.c
Firmware/Src/main/CyberBadgeUI/Apps/App_Settings/App_Settings_UI/images/: ui_img_img_ble_png.c  ui_img_img_ok_png.c  ui_img_img_res_png.c  ui_img_img_time_png.c  ui_img_img_wifi_png.c
Firmware/Src/main/CyberBadgeUI/Apps/App_Settings/App_Settings_UI/screens/: ui_settingAPP.c  ui_settingAPP.h
Firmware/Src/main/CyberBadgeUI/Launcher/: App_Launcher.cpp  App_Launcher.h
Modles/: 吧唧外壳.3mf  吧唧外壳.stl
(+50 files in other folders)
